feat: workable rest api for wallet
